Created customer/email api

--- a/MyFirstAPI/MyFirstAPI/appsettings.json
+++ b/MyFirstAPI/MyFirstAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "CustomerDataService": "Server=127.0.0.1;Port=3306;Database=customerdataservice;User=root;Password=Tanmoy1735"
+        "CustomerDataService": "Server=127.0.0.1;Port=3306;Database=customerdataservice;User=user;Password=pw"
     },
     "Logging": {
         "LogLevel": {
