--- a/.gitignore
+++ b/.gitignore
@@ -349,4 +349,5 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
+MyFirstAPI/MyFirstAPI/appsettings.json
 FinalProject/FinalProject/appsettings.json
