--- a/FinalProject/FinalProject/Properties/launchSettings.json
+++ b/FinalProject/FinalProject/Properties/launchSettings.json
@@ -13,7 +13,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      //"launchUrl": "swagger",
+      "launchUrl": "api/customers",
       "applicationUrl": "https://localhost:7050;http://localhost:5130",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
