--- a/FinalProject/FinalProject/Properties/launchSettings.json
+++ b/FinalProject/FinalProject/Properties/launchSettings.json
@@ -10,15 +10,16 @@
   },
   "profiles": {
     "FinalProject": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      //"launchUrl": "swagger",
-      "launchUrl": "api/customers",
-      "applicationUrl": "https://localhost:7050;http://localhost:5130",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "commandName": "Project",
+        "dotnetRunMessages": true,
+        "launchBrowser": true,
+        //"launchUrl": "swagger",
+        "launchUrl": "api/locations",
+        //"launchUrl": "api/landmarks",
+        "applicationUrl": "https://localhost:7050;http://localhost:5130",
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
+        }
     },
     "IIS Express": {
       "commandName": "IISExpress",
